# AvitoSystem

./: .gitignore  CLAUDE.md  CONTINUE.md  docker-compose.yml
avito-monitor/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.homelab.yml  docker-compose.yml  pyproject.toml
avito-monitor/alembic/: env.py
avito-monitor/alembic/versions/: 20260425_1200_initial_users_settings.py  20260425_1300_search_profiles_and_co.py  20260426_1913_v2_reliability_5_tables.py  20260427_1500_price_intelligence.py  20260428_1100_autosearch_sync.py  20260429_1100_search_profile_owner_account.py  20260505_1000_v2_llm_pipeline_schema.py  20260505_1010_v2_seed_criteria_library.py  20260505_1100_v2_relax_blacklist_reason.py  20260505_1200_drop_legacy_v2_artifacts.py  20260508_2200_avito_param_catalog.py  20260510_1200_polling_humanization.py  20260510_1300_reservation_tracking.py  20260511_1000_seller_dialogs.py  20260511_2000_phase_b_topics.py  20260512_1500_defect_checklist.py  (+2 more)
avito-monitor/app/: config.py  deps.py  logging_config.py  main.py
avito-monitor/avito_mcp/: __init__.py  config.py
avito-monitor/mcp_configs/: claude_code.mcp.json
avito-monitor/scripts/: backfill_features.py  bench_models.py  create_admin.py  migrate_accepted_to_dialogs.py  migrate_v2_to_defect_rules.py  seed_avito_param_catalog.py  seed_defect_catalog.py  seed_demo_data.py  test_llm.py
avito-monitor/tests/: conftest.py  test_account_pool.py  test_autosearch_sync.py  test_avito_mcp_client.py  test_polling.py  test_polling_humanization.py  test_v2_rip.py
(+828 files in other folders)
