[project]
name = "avito-monitor"
version = "0.1.0"
description = "Personal Avito monitoring & price intelligence (V1.2)"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "itsdangerous>=2.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "structlog>=24.4",
    "httpx>=0.27",
    "redis>=5.2",
    "taskiq>=0.11",
    "taskiq-redis>=1.0",
    "aiogram>=3.13",
    "mcp>=1.0",
    "starlette>=0.41",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
